--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-navbar>	</app-navbar>
-	<router-outlet>	</router-outlet>
-	<app-footer>	</app-footer>
+<app-navbar></app-navbar>
+<div class="container mt-5">
+	 <router-outlet></router-outlet>
+	</div>
